added two section

--- a/index.html
+++ b/index.html
@@ -14,15 +14,30 @@
 
 </head>
 <body>
-    <div class="half">
-        <h1>Welcome Good People to</h1>
-        <h1><span class="name">ABM Noman</span>'s Place</h1>
+    <section class="top">
+        <div class="half">
+            <h1>Welcome Good People to</h1>
+            <h1><span class="name">ABM Noman</span>'s Place</h1>
 
-        <h3>WorldClass Professional Web Developer</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum sint unde nam dolor necessitatibus doloribus. Beatae ad corrupti fuga odit pariatur veniam dicta animi ut nobis et? Fuga, soluta?</p>
-    </div>
-    <div class="half">
-        <img src="images/noman.png" alt="">
-    </div>
+            <h3>WorldClass Professional Web Developer</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum sint unde nam dolor necessitatibus doloribus. Beatae ad corrupti fuga odit pariatur veniam dicta animi ut nobis et? Fuga, soluta?</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/abm-noman/">HIRE ME</a>
+        </div>
+        <div class="half">
+            <img src="images/noman.png" alt="">
+        </div>
+    </section>
+    <section class="dream">
+        <div class="half">
+            <img src="images/noman.png" alt="">
+        </div>
+        <div class="half">
+            <h2>Dream</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet alias hic voluptatem provident! Repudiandae totam ea officiis facilis commodi quos? Cum, asperiores aut ex impedit eum totam minus excepturi sapiente?
+            Minima obcaecati, quos odit tenetur porro et aut, saepe consectetur tempora perferendis dolorum quaerat voluptate natus aspernatur cumque exercitationem atque temporibus ipsam modi quia? Maiores delectus labore aliquid iusto odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non maxime blanditiis laboriosam, labore omnis dignissimos mollitia cupiditate voluptatem aut iusto sapiente. Rem, sit minima! Nesciunt deleniti dicta facere voluptatibus iste.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/noman00001">Visit Me on FACEBOOK</a>
+        </div>
+    </section>
 </body>
 </html>
