added experience section

--- a/index.html
+++ b/index.html
@@ -39,5 +39,19 @@
             <a class="link-button" target="_blank" href="https://www.facebook.com/noman00001">Visit Me on FACEBOOK</a>
         </div>
     </section>
+    <section class="experience">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half single-experience">
+            <h2 class="name">Full Stack Web Developer</h2>
+            <h3>2021 - Present </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos officiis, architecto, excepturi debitis ipsa odit mollitia asperiores blanditiis minus facere nihil quis animi omnis, cupiditate inventore placeat quidem saepe expedita.</p>
+        </div>
+        <div id="learner" class="half single-experience">
+            <h2 class="name">Learnt Web Development</h2>
+            <h3>2019-2021</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa assumenda autem iure quidem soluta itaque cupiditate exercitationem nobis adipisci nihil.</p>
+
+        </div>
+    </section>
 </body>
 </html>
