--- a/index.html
+++ b/index.html
@@ -53,5 +53,8 @@
 
         </div>
     </section>
+    <footer>
+        <p>all rights reserved | Abm Noman | 2021</p> 
+    </footer>
 </body>
 </html>
